Added model and application

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Выпускная квалификационная работа Тамары Урушадзе</title>
+  <meta charset="UTF-8">
+  <title>Выпускная квалификационная работа Тамары Урушадзе</title>
 </head>
 <body>
-<h1>Выпускная квалификационная работа по курсу «Data Science»</h1>
-<h2>Прогнозирование конечных свойств новых материалов (композиционных материалов)</h2>
-<h2>Студентка Тамара Урушадзе</h2>
-
+<h1 style="text-align: center">Выпускная квалификационная работа по курсу «Data Science»</h1>
+<h2 style="text-align: center">Прогнозирование конечных свойств новых материалов (композиционных материалов)</h2>
+<h2 style="text-align: center">Студентка Тамара Урушадзе</h2>
+<br>
+<br>
+<h3>
+  <a href="/predictions/">
+    Прогнозирование модуля упругости при растяжении и прочности при растяжении
+  </a>
+</h3>
 </body>
 </html>
